src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-demo
  namespace: pipelines-tutorial
  name: spring-boot-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-demo
  template:
    metadata:
      labels:
        app: spring-boot-demo
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/spring-boot-demo:latest
        imagePullPolicy: IfNotPresent
        name: spring-boot-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
