src/main/jkube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-boot-demo
  labels:
    app: spring-boot-demo
spec:
  host: spring-boot-demo-pipelines-tutorial.apps.lab01.gpslab.club
  to:
    kind: Service
    name: spring-boot-demo
